[package]
name = "caesar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
thiserror = "1.0.48"
anyhow = "1.0.75"
sea-orm-cli = "0.12.2"
sea-orm = { version = "^0.12.2", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.21"
regex = "1.7.0"
text-colorizer = "1.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"


